@@ -482,7 +482,7 @@ typedef enum
 
 #define	AGENT_TIMEOUT	3
 
-#define	SENDER_TIMEOUT		5
+#define	SENDER_TIMEOUT		60
 #define	TRAPPER_TIMEOUT		5
 #define	SNMPTRAPPER_TIMEOUT	5
 
