@@ -5,9 +5,10 @@ sbin_PROGRAMS = zabbix_sender
 zabbix_sender_SOURCES = zabbix_sender.c
 
 zabbix_sender_LDADD = \
-	../libs/zbxcommon/libzbxcommon.a \
-	../libs/zbxlog/libzbxlog.a \
-	../libs/zbxsys/libzbxsys.a \
-	../libs/zbxcrypto/libzbxcrypto.a \
-	../libs/zbxconf/libzbxconf.a \
-	../libs/zbxcomms/libzbxcomms.a
+	$(top_srcdir)/src/libs/zbxcommon/libzbxcommon.a \
+	$(top_srcdir)/src/libs/zbxlog/libzbxlog.a \
+	$(top_srcdir)/src/libs/zbxsys/libzbxsys.a \
+	$(top_srcdir)/src/libs/zbxcrypto/libzbxcrypto.a \
+	$(top_srcdir)/src/libs/zbxconf/libzbxconf.a \
+	$(top_srcdir)/src/libs/zbxjson/libzbxjson.a \
+	$(top_srcdir)/src/libs/zbxcomms/libzbxcomms.a
